# hyperliquid_trader_stats

./: .env.example  .gitignore  README.md  pyproject.toml  setup.py
src/hyperliquid_trader_stats/: __init__.py  analysis.py  api.py  cli.py  config.py  discovery.py  hyper_x_utils.py  mongo_store.py  storage.py  visualize.py
src/hyperliquid_trader_stats/analytics/: __init__.py  compute_complete_trades.py
src/hyperliquid_trader_stats/api/: __init__.py  request_utils.py
src/hyperliquid_trader_stats/db/: __init__.py  collections.py
src/hyperliquid_trader_stats/plotting/: __init__.py  analyze_analyze_result.py  analyze_analyze_result_pro.py  analyze_history.py  analyze_ls_rate.py  analyze_ls_rate_over_value_pro.py  visualize_coin_value_ratio.py
src/hyperliquid_trader_stats/services/: __init__.py  add_addresses_from_vaults.py  fetch_and_store_address.py  fetch_and_store_addresses_from_block.py  fetch_and_store_addresses_from_block_requests.py  fetch_and_store_addresses_from_hyperdash_top_traders.py  fetch_and_store_user_fills.py  fetch_and_store_user_state.py  fetch_block_addresses.py  gen_user_fills_summary.py  run_fetch_states_and_analyze.py  update_high_win_rate_user_state.py
src/hyperliquid_trader_stats/services/vaults/: __init__.py  fetch_and_store_vaults_info.py  fetch_and_store_vaults_list.py
src/hyperliquid_trader_stats/web/: __init__.py  app.py  queries.py
tests/: test_analysis.py  test_analyze_coin_positions.py  test_cli.py  test_compute_complete_trades_retry.py  test_compute_trades_selection.py  test_config.py  test_db_indexes.py  test_discovery_storage.py  test_fetch_user_fills.py  test_fetch_user_states.py  test_visualize_coin_value_ratio.py  test_web_queries.py
(+5 files in other folders)
