[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperliquid-trader-stats"
version = "0.1.0"
description = "Download Hyperliquid account fills, compute trader win rates, and render dashboards."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.9",
    "fastapi>=0.111",
    "motor>=3.5",
    "pymongo>=4.6",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "openpyxl>=3.1",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "web3>=6.0",
    "websocket-client>=1.7",
    "tenacity>=8.2",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
browser = [
    "DrissionPage>=4.0",
    "curl-cffi>=0.6",
    "scrapy>=2.11",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
hyper-stats = "hyperliquid_trader_stats.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hyperliquid_trader_stats = ["web/static/*"]
